用户管理和框架菜单

--- a/src/King.Application/King.Application.csproj
+++ b/src/King.Application/King.Application.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <ProjectReference Include="..\King.Domain\King.Domain.csproj" />
     <ProjectReference Include="..\King.EntityFrameworkCore\King.EntityFrameworkCore.csproj" />
+    <ProjectReference Include="..\King.Utility\King.Utility.csproj" />
   </ItemGroup>
 
 </Project>
