--- a/src/King.EntityFrameworkCore/King.EntityFrameworkCore.csproj
+++ b/src/King.EntityFrameworkCore/King.EntityFrameworkCore.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\King.Domain\King.Domain.csproj" />
+    <ProjectReference Include="..\King.Utility\King.Utility.csproj" />
   </ItemGroup>
 
 </Project>
