--- a/src/King.MVC/bower.json
+++ b/src/King.MVC/bower.json
@@ -11,6 +11,7 @@
     "bootstrap-table": "1.11.1",
     "layer": "3.0",
     "moment": "2.18.1",
-    "select2": "4.0.3"
+    "select2": "4.0.3",
+    "dot": "doT#v1.1.2"
   }
 }
