--- a/src/King.MVC/appsettings.json
+++ b/src/King.MVC/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "server=127.0.0.1;port=3306;uid=root;pwd=lgkaka123;database=kingweb"
+    "DefaultConnection": "server=47.93.53.76;port=3306;uid=kakayunmu;pwd=lgkaka123;database=kingweb"
   }
 }
