--- a/src/King.MVC/bower.json
+++ b/src/King.MVC/bower.json
@@ -3,7 +3,6 @@
   "private": true,
   "dependencies": {
     "bootstrap": "v3.3.7",
-    "jQuery": "3.2.1",
     "font-awesome": "Font-Awesome#v4.7.0",
     "Ionicons": "ionicons#v2.0.1",
     "iCheck": "1.0.2",
@@ -12,6 +11,7 @@
     "layer": "3.0",
     "moment": "2.18.1",
     "select2": "4.0.3",
-    "dot": "doT#v1.1.2"
+    "dot": "doT#v1.1.2",
+    "jQuery": "3.2.1"
   }
 }
